confirm email francais + erreur 404 + produits jsute pour vendeur

--- a/Projet Web Commerce/Views/PPGestionnaires/ListeVendeursAConfirmer.cshtml
+++ b/Projet Web Commerce/Views/PPGestionnaires/ListeVendeursAConfirmer.cshtml
@@ -145,7 +145,7 @@
         }
 
         Swal.fire({
-            title: 'Courriel a envoyer au vendeur',
+            title: 'Courriel à envoyer au vendeur',
             html: `<input id="sujet" style="width:550;" class="swal2-input" value="${sujet}"/> <textarea id="message" style="resize:none;width:550;height:300;" class="swal2-input">${message}</textarea>`,
             showCancelButton: true,
             confirmButtonText: 'Envoyer',
