--- a/Projet Web Commerce/Views/PPProduits/SupprimerPanier.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/SupprimerPanier.cshtml
@@ -114,7 +114,7 @@ else
                                     <div class="col-12 col-md-2 d-flex align-items-center justify-content-center">
                                         <b>@Html.DisplayFor(modelItem => cat.Description) </b>
                                     </div>
-                                    @if (item.PrixVente != null)
+                                    @if (item.PrixVente != null && item.DateVente > DateTime.Now)
                                     {
                                         var prix = item.PrixVente * client.TotalItems;
                                         <div class="col-12 col-md-3 d-flex align-items-center justify-content-center">
@@ -153,7 +153,7 @@ else
                             if (item != null)
                             {
                                 decimal? prix = 0;
-                                if (item.PrixVente != null)
+                                if (item.PrixVente != null && item.DateVente > DateTime.Now)
                                 {
                                     prix = item.PrixVente * client.TotalItems;
                                 }
