--- a/Projet Web Commerce/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -1,11 +1,26 @@
 ﻿@page
+@inject SignInManager<Projet_Web_Commerce.Areas.Identity.Data.Utilisateur> SignInManager
 @model AccessDeniedModel
 @{
     ViewData["Title"] = "Accès refusé";
 }
 
 <header>
-    <a asp-area="Identity" asp-page="/Account/Login">Retour</a>
     <h1 class="text-danger">@ViewData["Title"]</h1>
     <p class="text-danger">Vous n'avez pas accès à cette page.</p>
+    @if (SignInManager.IsSignedIn(User))
+    {
+        if (User.IsInRole("Vendeur"))
+        {
+            <a class="btn btn-primary" asp-area="" asp-controller="PPProduits" asp-action="Index">Retour</a>
+        }
+        else
+        {
+            <a asp-area="" asp-controller="MainMenu" asp-action="Catalogue">Retour</a>
+        }
+    }
+    else
+    {
+        <a asp-area="Identity" asp-action="/Account/Login">Retour</a>
+    }
 </header>
