--- a/Projet Web Commerce/Views/Shared/_LoginPartial.cshtml
+++ b/Projet Web Commerce/Views/Shared/_LoginPartial.cshtml
@@ -46,6 +46,10 @@
                 </li>
             }
 
+            <li class="nav-item">
+                <a class="nav-link" asp-area="" asp-controller="EmailSender" asp-action="Index" style="color: rgb(249, 229, 71)">Envoyer Email</a>
+            </li>
+
             if ((estDansRole = await UserManager.IsInRoleAsync(user, "Client")))
             {
                 <li class="nav-item">
