--- a/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
@@ -21,6 +21,15 @@
     </div>
 }
 
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger" role="alert">
+        @TempData["ErrorMessage"]
+    </div>
+}
+
+
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
 
 
@@ -205,7 +214,6 @@
                                         <input type="hidden" name="NoProduit" value="@item.NoProduit" />
                                         <input type="hidden" name="NoClient" value="@Model.noClient" />
                                         <input type="hidden" name="NoVendeur" value="@item.NoVendeur" />
-                                        <input type="hidden" name="returnUrl" id="returnUrl" value="test" />
                                         <br />
                                         <button class="btn btn-secondary" type="submit">Ajouter au panier</button>
                                         <select name="quantite">
@@ -232,35 +240,39 @@
         }
     </div>
 
-@if (Model.ProduitsList.Count > 0)
-{
-    <div class="pagination">
-        <nav aria-label="Page navigation">
-            <ul class="pagination">
-                @if (Model.ProduitsList.HasPreviousPage)
-                {
-                    <li class="page-item">
-                        <a class="page-link" href="@Url.Action("CatalogueVendeur", new { sortOrder = ViewBag.sortOrder, pageNumber = Model.ProduitsList.PageIndex - 1, parPage = ViewBag.parPage, searchString = ViewBag.searchString, id = ViewBag.id })">Previous</a>
-                    </li>
-                }
+    @if (SignInManager.IsSignedIn(User))
+    {
+        @if (Model.ProduitsList.Count > 0)
+        {
+            <div class="pagination">
+                <nav aria-label="Page navigation">
+                    <ul class="pagination">
+                        @if (Model.ProduitsList.HasPreviousPage)
+                        {
+                            <li class="page-item">
+                                <a class="page-link" href="@Url.Action("CatalogueVendeur", new { sortOrder = ViewBag.sortOrder, pageNumber = Model.ProduitsList.PageIndex - 1, parPage = ViewBag.parPage, searchString = ViewBag.searchString, id = ViewBag.id })">Previous</a>
+                            </li>
+                        }
 
-                @for (int i = 1; i <= Model.ProduitsList.TotalPages; i++)
-                {
-                    <li class="page-item @(i == Model.ProduitsList.PageIndex ? "active" : "")">
-                        <a class="page-link" href="@Url.Action("CatalogueVendeur", new { sortOrder = ViewBag.sortOrder, pageNumber = i, parPage = ViewBag.parPage, searchString = ViewBag.searchString, id = ViewBag.id })">@i</a>
-                    </li>
-                }
+                        @for (int i = 1; i <= Model.ProduitsList.TotalPages; i++)
+                        {
+                            <li class="page-item @(i == Model.ProduitsList.PageIndex ? "active" : "")">
+                                <a class="page-link" href="@Url.Action("CatalogueVendeur", new { sortOrder = ViewBag.sortOrder, pageNumber = i, parPage = ViewBag.parPage, searchString = ViewBag.searchString, id = ViewBag.id })">@i</a>
+                            </li>
+                        }
 
-                @if (Model.ProduitsList.HasNextPage)
-                {
-                    <li class="page-item">
-                        <a class="page-link" href="@Url.Action("CatalogueVendeur", new { sortOrder = ViewBag.sortOrder, pageNumber = Model.ProduitsList.PageIndex + 1, parPage = ViewBag.parPage, searchString = ViewBag.searchString, id = ViewBag.id })">Next</a>
-                    </li>
-                }
-            </ul>
-        </nav>
-    </div>
-}
+                        @if (Model.ProduitsList.HasNextPage)
+                        {
+                            <li class="page-item">
+                                <a class="page-link" href="@Url.Action("CatalogueVendeur", new { sortOrder = ViewBag.sortOrder, pageNumber = Model.ProduitsList.PageIndex + 1, parPage = ViewBag.parPage, searchString = ViewBag.searchString, id = ViewBag.id })">Next</a>
+                            </li>
+                        }
+                    </ul>
+                </nav>
+            </div>
+        }
+    }
+
 
 
 
