--- a/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
@@ -55,7 +55,8 @@
                             <div class="flex-grow-1">
                                 <div class="input-group" style="width:400px;">
                                     <!-- Adjust width and remove margin -->
-                                    @Html.TextBox("SearchString", null, new { placeholder = "Rechercher par Nom ou Description", @class = "form-control" })
+                            @Html.TextBoxFor(model => model.searchString, new { placeholder = "Rechercher par Nom,Description ou NoProduit", @class = "form-control" })
+
                                     <div class="input-group-append">
                                         <span class="input-group-text">
                                             <i class="bi bi-search"></i>
@@ -71,32 +72,14 @@
 
 
                         <div class="col-md-2">
-                            <select class="form-select btn-secondary" style="background-color: rgb(124, 105, 146);" aria-label="Trier par" id="sortOrder" name="sortOrder" onchange="this.form.submit()">
-                                <option value="dateAsc" selected="@(ViewBag.sortOrder == "dateAsc")">Date de parution &#8593;</option>
-                                <option value="dateDesc" selected="@(ViewBag.sortOrder == "dateDesc")">Date de parution &#8595;</option>
-                                <option value="numProdAsc" selected="@(ViewBag.sortOrder == "numProdAsc")">Numéro de produit &#8593;</option>
-                                <option value="numProdDesc" selected="@(ViewBag.sortOrder == "numProdDesc")">Numéro de produit &#8595;</option>
-                                <option value="catProdAsc" selected="@(ViewBag.sortOrder == "catProdAsc")">Catégorie particulière de produit &#8593;</option>
-                                <option value="catProdDesc" selected="@(ViewBag.sortOrder == "catProdDesc")">Catégorie particulière de produit &#8595;</option>
-                                <option value="descProdAsc" selected="@(ViewBag.sortOrder == "descProdAsc")">Description du produit &#8593;</option>
-                                <option value="descProdDesc" selected="@(ViewBag.sortOrder == "descProdDesc")">Description du produit &#8595;</option>
-                            </select>
-
+                            <select asp-for="sortOrder" asp-items="@Model.sortOrderOptions" class="form-select btn-secondary" style="background-color: rgb(124, 105, 146);" onchange="this.form.submit()"></select>
                         </div>
                         <div class="col-md-3">
+
                             <button type="submit" style="background-color: rgb(124, 105, 146);" class="btn btn-secondary">Rechercher</button>
 
                             <div class="float-end">
-                                <select class="form-select btn-secondary" style="background-color: rgb(124, 105, 146); width:100px" aria-label="Trier par" id="parPage" name="parPage" onchange="this.form.submit()">
-                                    <option value="6" selected="@(ViewBag.parPage == "6")">6</option>
-                                    <option value="9" selected="@(ViewBag.parPage == "9")">9</option>
-                                    <option value="12" selected="@(ViewBag.parPage == "12")">12</option>
-                                    <option value="15" selected="@(ViewBag.parPage == "15")">15</option>
-                                    <option value="21" selected="@(ViewBag.parPage == "21")">21</option>
-                                    <option value="30" selected="@(ViewBag.parPage == "30")">30</option>
-                                    <option value="60" selected="@(ViewBag.parPage == "60")">60</option>
-                                    <option value="Tous" selected="@(ViewBag.parPage == "Tous")">Tous</option>
-                                </select>
+                                <select asp-for="parPage" asp-items="@Model.parPageOptions" class="form-select btn-secondary" style="background-color: rgb(124, 105, 146); width:100px" onchange="this.form.submit()"></select>
                             </div>
                         </div>
 
@@ -107,20 +90,11 @@
 
                             <div class="row" style="padding-left: 15px;">
                                 <div class="col">
-                                    <select class="btn btn-secondary" style="background-color: rgb(124, 105, 146); width: 100%;" aria-label="Trier par" id="searchCat" name="searchCat">
+                                    <select asp-for="searchCat" class="btn btn-secondary" style="background-color: rgb(124, 105, 146); width: 100%;">
                                         <option value="">Catégorie</option>
-                                        @foreach (var cat in ViewBag.CategoriesVendeur)
+                                        @foreach (var category in Model.CategoriesList)
                                         {
-                                            <option value="@cat" selected="@(ViewBag.searchCat == cat)">@cat</option>
-                                        }
-                                    </select>
-                                </div>
-                                <div class="col">
-                                    <select class="btn btn-secondary" style="background-color: rgb(124, 105, 146); width: 100%;" aria-label="Dropdown" aria-haspopup="true" aria-expanded="false" id="searchNums" name="searchNums">
-                                        <option value="">Numéro de produit</option> <!-- This will act as the label -->
-                                        @foreach (var nums in ViewBag.NumsProduit)
-                                        {
-                                            <option value="@nums" selected="@(ViewBag.searchNums == nums)">@nums</option>
+                                            <option value="@category.Description">@category.Description</option>
                                         }
                                     </select>
                                 </div>
@@ -130,16 +104,16 @@
                         <div class="col-md-3" style="padding: 20px;">
                             <div style="margin-bottom: 20px;">
                                 <div class="input-group date">
-                                    <input type="date" class="form-control" id="dateApres" name="dateApres" placeholder="Parue Après" style="padding-left: 15px; width: 200px; value=" @ViewBag.DateApres"">
-                                </div>
+                            <input type="date" class="form-control" id="dateApres" name="dateApres" placeholder="Parue Après" style="padding-left: 15px; width: 200px;" value="@Model.dateApres">
+                        </div>
                             </div>
                         </div>
 
                         <div class="col-md-3" style="padding: 20px;">
                             <div>
                                 <div class="input-group date">
-                                    <input type="date" class="form-control" id="dateAvant" name="dateAvant" placeholder="Parue Avant" style="padding-left: 15px; width: 200px;" value="@ViewBag.DateAvant">
-                                </div>
+                            <input type="date" class="form-control" id="dateApres" name="dateApres" placeholder="Parue Avant" style="padding-left: 15px; width: 200px;" value="@Model.dateAvant">
+                        </div>
                             </div>
                         </div>
 
@@ -214,6 +188,8 @@
                                         <input type="hidden" name="NoProduit" value="@item.NoProduit" />
                                         <input type="hidden" name="NoClient" value="@Model.noClient" />
                                         <input type="hidden" name="NoVendeur" value="@item.NoVendeur" />
+
+                                        @Html.HiddenFor(m => m.searchString)
                                         <br />
                                         <button class="btn btn-secondary" type="submit">Ajouter au panier</button>
                                         <select name="quantite">
@@ -367,6 +343,25 @@
             });
 
         });
+
+            <script>
+                $(document).ready(function () {
+                    $('.ajoutPanierForm').submit(function (e) {
+                        e.preventDefault(); // Prevent the default form submission
+
+                        // Serialize data from both forms
+                        var parentFormData = $('#mainForm').serialize();
+                        var ajoutPanierFormData = $(this).serialize();
+                        var combinedFormData = parentFormData + '&' + ajoutPanierFormData;
+                        console.log(combinedFormData);
+
+                        // Submit combined data
+
+
+                        return false; // Prevent the form from submitting normally
+                    });
+                });
+        </script>
 
 
     </script>
