--- a/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
@@ -90,12 +90,8 @@
 
                             <div class="row" style="padding-left: 15px;">
                                 <div class="col">
-                                    <select asp-for="searchCat" class="btn btn-secondary" style="background-color: rgb(124, 105, 146); width: 100%;">
+                            <select asp-for="searchCat" asp-items="@Model.categorieOptions" class="btn btn-secondary" style="background-color: rgb(124, 105, 146); width: 100%;">
                                         <option value="">Catégorie</option>
-                                        @foreach (var category in Model.CategoriesList)
-                                        {
-                                            <option value="@category.Description">@category.Description</option>
-                                        }
                                     </select>
                                 </div>
                             </div>
@@ -104,7 +100,8 @@
                         <div class="col-md-3" style="padding: 20px;">
                             <div style="margin-bottom: 20px;">
                                 <div class="input-group date">
-                            <input type="date" class="form-control" id="dateApres" name="dateApres" placeholder="Parue Après" style="padding-left: 15px; width: 200px;" value="@Model.dateApres">
+                            <input type="date" class="form-control" id="dateApres" name="dateApres" placeholder="Parue Après" style="padding-left: 15px; width: 200px;" value="@Model.dateApres?.ToString("yyyy-MM-dd")">
+
                         </div>
                             </div>
                         </div>
@@ -112,7 +109,7 @@
                         <div class="col-md-3" style="padding: 20px;">
                             <div>
                                 <div class="input-group date">
-                            <input type="date" class="form-control" id="dateApres" name="dateApres" placeholder="Parue Avant" style="padding-left: 15px; width: 200px;" value="@Model.dateAvant">
+                            <input type="date" class="form-control" id="dateAvant" name="dateAvant" placeholder="Parue Avant" style="padding-left: 15px; width: 200px;" value="@Model.dateAvant?.ToString("yyyy-MM-dd")">
                         </div>
                             </div>
                         </div>
@@ -190,6 +187,7 @@
                                         <input type="hidden" name="NoVendeur" value="@item.NoVendeur" />
 
                                         @Html.HiddenFor(m => m.searchString)
+                                        @Html.HiddenFor(m => m.parPage)
                                         <br />
                                         <button class="btn btn-secondary" type="submit">Ajouter au panier</button>
                                         <select name="quantite">
@@ -321,8 +319,6 @@
 
 
             $(document).ready(function () {
-                document.getElementById("dateAvant").value = "@ViewBag.DateAvant";
-                document.getElementById("dateApres").value = "@ViewBag.DateApres";
                 var isContainerVisible = false; // Variable to track visibility state
 
                 $(".show-options-link").click(function () {
@@ -343,27 +339,6 @@
             });
 
         });
-
-            <script>
-                $(document).ready(function () {
-                    $('.ajoutPanierForm').submit(function (e) {
-                        e.preventDefault(); // Prevent the default form submission
-
-                        // Serialize data from both forms
-                        var parentFormData = $('#mainForm').serialize();
-                        var ajoutPanierFormData = $(this).serialize();
-                        var combinedFormData = parentFormData + '&' + ajoutPanierFormData;
-                        console.log(combinedFormData);
-
-                        // Submit combined data
-
-
-                        return false; // Prevent the form from submitting normally
-                    });
-                });
-        </script>
-
-
     </script>
 }
 
