--- a/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
@@ -188,6 +188,11 @@
 
                                         @Html.HiddenFor(m => m.searchString)
                                         @Html.HiddenFor(m => m.parPage)
+                                        @Html.HiddenFor(m => m.searchCat)
+                                        @Html.HiddenFor(m => m.pageNumber)
+                                        @Html.HiddenFor(m => m.dateApres)
+                                        @Html.HiddenFor(m => m.dateAvant)
+
                                         <br />
                                         <button class="btn btn-secondary" type="submit">Ajouter au panier</button>
                                         <select name="quantite">
